--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "Specs:",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel src/index.html",
+    "client": "parcel src/index.html",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
-    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet"
+    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
+    "start": "node server.js",
+    "server": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -31,10 +34,14 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "node-sass": "^5.0.0",
+    "nodemon": "^2.0.7",
     "parcel": "^1.12.3",
     "prettier": "^2.2.1"
   },
   "dependencies": {
+    "concurrently": "^6.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
