--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "node-sass": "^5.0.0",
     "nodemon": "^2.0.7",
     "parcel": "^1.12.3",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "python-shell": "^2.0.3"
   },
   "dependencies": {
     "concurrently": "^6.0.0",
