--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,61 @@
+aiodns==2.0.0
+aiohttp==3.7.4.post0
+alog==1.1.0
 appdirs==1.4.4
 astroid==2.5.1
+async-timeout==3.0.1
+attrs==20.3.0
+autopep8==1.5.6
+bitmex==0.2.2
+bitmex-websocket==0.2.83
+bravado==11.0.3
+bravado-core==5.17.0
+ccxt==1.44.18
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+click==7.1.2
+cryptography==3.4.6
 distlib==0.3.1
 filelock==3.0.12
+idna==2.10
 importlib-metadata==3.4.0
 isort==5.8.0
+jsonpointer==2.1
+jsonref==0.2
+jsonschema==3.2.0
 lazy-object-proxy==1.6.0
 mccabe==0.6.1
+monotonic==1.5
+msgpack==1.0.2
+multidict==5.1.0
+numpy==1.20.1
+pandas==1.2.3
+pycares==3.1.1
+pycodestyle==2.7.0
+pycparser==2.20
+pyee==8.1.0
 pylint==2.7.2
+pyrsistent==0.17.3
+python-dateutil==2.8.1
 python-decouple==3.4
+pytz==2021.1
+PyYAML==5.4.1
+requests==2.25.1
+rfc3987==1.3.8
+semver==2.13.0
+simplejson==3.17.2
 six==1.15.0
+strict-rfc3339==0.7
+swagger-spec-validator==2.7.3
 toml==0.10.2
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
+urllib3==1.26.4
 virtualenv==20.4.2
+webcolors==1.11.1
+websocket-client==0.58.0
+websockets==8.1
 wrapt==1.12.1
+yarl==1.1.0
 zipp==3.4.0
