--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
   "dependencies": {
     "concurrently": "^6.0.0",
     "cors": "^2.8.5",
+    "d3": "^6.7.0",
     "express": "^4.17.1",
+    "mongodb": "^3.6.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
